tests/fixtures/invalid/pow_set_int_none.py
# Cannot call pow() with Set[int], Int, None
x = pow({1, 2, 3}, 1, None)
